--- a/autobooth.html
+++ b/autobooth.html
@@ -103,8 +103,8 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
               <h2 class="mb-4 display-5 text-center">Experience Excellence</h2>
-              <p class="text-secondary mb-5 text-center lead fs-4">We stand out as the epitome of customer-centricity, offering the best benefits like free shipping and 24/7 support.</p>
-              <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
+              <p class="text-secondary mb- text-center lead fs-4">We stand out as the epitome of customer-centricity, offering the best benefits like <strong> free shipping</strong> and <strong>All session support.</strong> </p>
+              <hr class="w-100 mx-auto mb-4 mb-xl-9 border-dark-subtle">
             </div>
           </div>
         </div>
@@ -153,8 +153,8 @@
                           </svg>
                         </div>
                         <div>
-                          <h4 class="mb-1 mt-2">24/7 Support</h4>
-                          <p class="m-0 text-secondary">Customer's peace of mind</p>
+                          <h4 class="mb-1 mt-2">All session Support</h4>
+                          <p class="m-0 text-secondary">Full support during session</p>
                         </div>
                       </div>
                     </div>
@@ -375,10 +375,10 @@
 <!-- FAQ section -->
 
 
-      <div class="mb-8">
+      <div>
         <div class="container">
           <div class="row justify-content-center">
-            <h2 class="mb-5 pt-5 pb-2 pl-xl-5 border-bottom pl-3 ">FAQ</h2>
+            <h2 class="mb-3 pb-2 pt-5 pl-xl-5 border-bottom pl-3 ">FAQ</h2>
             <div class="col-12 col-xl-10">
               <div class="accordion accordion-flush" id="faqAccount">
                 <div class="accordion-item bg-transparent border-bottom py-3">
