--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
       body {
         font-family: 'Montserrat', sans-serif;
       }
+      .carousel-indicators{
+        color: rgb(212, 1, 1);
+        background-color: rgb(175, 175, 175);
+      }
+      .carousel-indicators .active {
+        background-color: #000000; /* Highlighted indicator color */
+      }
     </style>
+    
     <title>elenemts</title>
   </head>
 
@@ -495,11 +503,6 @@
         <div class="pt-5 px-4 container" >
           <h2 class="border-bottom pb-1" id="contact" >Our Team</h2>
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
             <div class="carousel-inner">
               <!-- Section 1 -->
               <div class="carousel-item active">
@@ -531,11 +534,11 @@
                   <div class="container">
                     <div class="row align-items-center justify-content-center border border-1 p-5">
                       <div class="col-md-4 col-lg-3">
-                        <img alt="..." class="img-fluid rounded-circle" src="images/WhatsApp Image 2025-03-09 at 10.39.23 PM.jpeg">
+                        <img alt="..." class="img-fluid rounded-circle" src="images/Emma.jpg">
                       </div>
                       <div class="col-md-8 col-lg-7">
                         <div class="card-body ms-md-5 mt-3 mt-md-0">
-                          <div class="text-muted">Programmer</div>
+                          <div class="text-muted">Marketing Executive</div>
                           <h3 class="fw-bold m-0 mb-4">John Doe</h3>
                           <p class="lead text-black">Lorem ipsum dolor sit amet consectetur adipisicing vel eligendi necessitatibus quos voluptates doloribus at itaque</p>
                           <div class="d-flex mt-4">
@@ -555,11 +558,83 @@
                   <div class="container">
                     <div class="row align-items-center justify-content-center border border-1 p-5">
                       <div class="col-md-4 col-lg-3">
+                        <img alt="..." class="img-fluid rounded-circle" src="images/daman.jpg">
+                      </div>
+                      <div class="col-md-8 col-lg-7">
+                        <div class="card-body ms-md-5 mt-3 mt-md-0">
+                          <div class="text-muted">Manager</div>
+                          <h3 class="fw-bold m-0 mb-4">Daman Kumar</h3>
+                          <p class="lead text-black">Lorem ipsum dolor sit amet consectetur adipisicing vel eligendi necessitatibus quos voluptates doloribus at itaque</p>
+                          <div class="d-flex mt-4">
+                            <a class="btn btn-sm me-2" href=""><svg class="bi bi-facebook" fill="currentColor" height="16" viewbox="0 0 16 16"></svg></a>
+                            <a class="btn btn-sm me-2" href=""><svg class="bi bi-twitter" fill="currentColor" height="16" viewbox="0 0 16 16"></svg></a>
+                            <a class="btn btn-sm" href=""><svg class="bi bi-linkedin" fill="currentColor" height="16" viewbox="0 0 16 16"></svg></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+              </div>
+              <!-- Section 1 -->
+              <div class="carousel-item active">
+                <section class="py-5">
+                  <div class="container">
+                    <div class="row align-items-center justify-content-center border border-1 p-5">
+                      <div class="col-md-4 col-lg-3">
                         <img alt="..." class="img-fluid rounded-circle" src="images/WhatsApp Image 2025-03-09 at 10.39.23 PM.jpeg">
                       </div>
                       <div class="col-md-8 col-lg-7">
                         <div class="card-body ms-md-5 mt-3 mt-md-0">
                           <div class="text-muted">Programmer</div>
+                          <h3 class="fw-bold m-0 mb-4">Perthho Patel</h3>
+                          <p class="lead text-black">Lorem ipsum dolor sit amet consectetur adipisicing vel eligendi necessitatibus quos voluptates doloribus at itaque</p>
+                          <div class="d-flex mt-4">
+                            <a class="btn btn-sm me-2" href=""><svg class="bi bi-facebook" fill="currentColor" height="16" viewbox="0 0 16 16"></svg></a>
+                            <a class="btn btn-sm me-2" href=""><svg class="bi bi-twitter" fill="currentColor" height="16" viewbox="0 0 16 16"></svg></a>
+                            <a class="btn btn-sm" href=""><svg class="bi bi-linkedin" fill="currentColor" height="16" viewbox="0 0 16 16"></svg></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+              </div>
+              <!-- Section 2 -->
+              <div class="carousel-item">
+                <section class="py-5">
+                  <div class="container">
+                    <div class="row align-items-center justify-content-center border border-1 p-5">
+                      <div class="col-md-4 col-lg-3">
+                        <img alt="..." class="img-fluid rounded-circle" src="images/Emma.jpg">
+                      </div>
+                      <div class="col-md-8 col-lg-7">
+                        <div class="card-body ms-md-5 mt-3 mt-md-0">
+                          <div class="text-muted">Marketing Executive</div>
+                          <h3 class="fw-bold m-0 mb-4">John Doe</h3>
+                          <p class="lead text-black">Lorem ipsum dolor sit amet consectetur adipisicing vel eligendi necessitatibus quos voluptates doloribus at itaque</p>
+                          <div class="d-flex mt-4">
+                            <a class="btn btn-sm me-2" href=""><svg class="bi bi-facebook" fill="currentColor" height="16" viewbox="0 0 16 16"></svg></a>
+                            <a class="btn btn-sm me-2" href=""><svg class="bi bi-twitter" fill="currentColor" height="16" viewbox="0 0 16 16"></svg></a>
+                            <a class="btn btn-sm" href=""><svg class="bi bi-linkedin" fill="currentColor" height="16" viewbox="0 0 16 16"></svg></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+              </div>
+              <!-- Section 2 -->
+              <div class="carousel-item">
+                <section class="py-5">
+                  <div class="container">
+                    <div class="row align-items-center justify-content-center border border-1 p-5">
+                      <div class="col-md-4 col-lg-3">
+                        <img alt="..." class="img-fluid rounded-circle" src="images/Emma.jpg">
+                      </div>
+                      <div class="col-md-8 col-lg-7">
+                        <div class="card-body ms-md-5 mt-3 mt-md-0">
+                          <div class="text-muted">Marketing Executive</div>
                           <h3 class="fw-bold m-0 mb-4">John Doe</h3>
                           <p class="lead text-black">Lorem ipsum dolor sit amet consectetur adipisicing vel eligendi necessitatibus quos voluptates doloribus at itaque</p>
                           <div class="d-flex mt-4">
@@ -574,6 +649,16 @@
                 </section>
               </div>
             </div>
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+
+
+            </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
@@ -582,7 +667,7 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
+          </div>          
         </div>
       </div>
 
