--- a/autobooth.html
+++ b/autobooth.html
@@ -90,7 +90,7 @@
         <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white">
             <h1 class="mb-3">Grab Your Photobooth</h1>
-            <a data-mdb-ripple-init class="btn btn-outline-light btn-lg" href="datepicker.html" role="button">Book Now</a>
+            <a data-mdb-ripple-init class="btn btn-outline-light btn-lg" href="datepicker.html" role="button" style="border-radius: 0pc;">Book Now</a>
           </div>
         </div>
       </div>
@@ -116,7 +116,7 @@
                   <div class="col-12 col-lg-4">
                     <div class="card border-dark rounded-0">
                       <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-start ml-3">
-                        <div class="me-3 text-dark p-3">
+                        <div class="me-3 text-dark p-2">
                           <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
                             <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/>
                           </svg>
@@ -131,7 +131,7 @@
                   <div class="col-12 col-lg-4">
                     <div class="card border-dark rounded-0">
                       <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-start ml-3">
-                        <div class="me-3 text-dark p-3">
+                        <div class="me-3 text-dark p-2">
                           <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-box-seam" viewBox="0 0 16 16">
                             <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2zm3.564 1.426L5.596 5 8 5.961 14.154 3.5zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z"/>
                           </svg>
@@ -146,7 +146,7 @@
                   <div class="col-12 col-lg-4">
                     <div class="card border-dark rounded-0">
                       <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-start ml-3">
-                        <div class="me-3 text-dark p-3">
+                        <div class="me-3 text-dark p-2">
                           <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
                             <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
                             <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
@@ -234,7 +234,7 @@
                   <ul class="list-unstyled mt-3 mb-4">
                     <li>3 Hours</li>
                   </ul>
-                  <a onclick="window.location.href='datepicker.html?plan=basic'"><button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button></a> 
+                  <a onclick="window.location.href='datepicker.html?plan=basic'"><button type="button" class="w-100 btn btn-lg btn-dark" style="border-radius: 0px;">Book Now</button></a> 
                 </div>
               </div>
             </div>
@@ -248,7 +248,7 @@
                   <ul class="list-unstyled mt-3 mb-4">
                     <li>4 Hours</li>
                   </ul>
-                  <a onclick="window.location.href='datepicker.html?plan=pro'"><button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button></a> 
+                  <a onclick="window.location.href='datepicker.html?plan=pro'"><button type="button" class="w-100 btn btn-lg btn-dark" style="border-radius: 0px;">Book Now</button></a> 
                 </div>
               </div>
             </div>
@@ -262,7 +262,7 @@
                   <ul class="list-unstyled mt-3 mb-4">
                     <li>4 Hours</li>
                   </ul>
-                  <a onclick="window.location.href='datepicker.html?plan=ultra'"><button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button></a> 
+                  <a onclick="window.location.href='datepicker.html?plan=ultra'"><button type="button" class="w-100 btn btn-lg btn-dark" style="border-radius: 0px;">Book Now</button></a> 
                 </div>
               </div>
             </div>
