--- a/import.html
+++ b/import.html
@@ -100,7 +100,7 @@
                       <span class="col-12 col-sm-10 col-md-8 col-xxl-7" >International trade can be complex, but our experienced team makes it hassle-free. We handle everything from customs clearance to logistics, ensuring your goods move efficiently across borders.</span>
                     </p>
                     <div class="pl-3">
-                      <a href="importBlog.html" class="btn btn-outline-light mb-5">Explore More</a>
+                      <a href="importBlog.html" class="btn btn-outline-light mb-5" style="border-radius: 0px;">Explore More</a>
                     </div>
                   </div>
                 </div>
@@ -119,6 +119,11 @@
         <div class="row pl-xl-5">
           <div class="col-xs-12 col-lg-9 col-sm-9 col-md-9 pl-xl-5">
             <form action="https://formspree.io/f/mjkyyqbw" method="POST">
+              <style>
+                .form-control{
+                  border-radius: 0px;
+                }
+              </style>
               <div class="row pl-xl-5">
                 <div class="col-lg-6 col-xs-12 col-sm-6">
                   <div class="form-group">
@@ -235,7 +240,7 @@
                 </div>
               </div>
             
-              <button class="btn btn-outline-dark">Submit</button>
+              <button class="btn btn-outline-dark ml-xl-5" style="border-radius: 0px;">Submit</button>
               <hr>
             </form>
           </div> 
