--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-2 shadow-lg" style="background-image: url('images/E-Commerce\ Illustration\ Kit-01.jpg');">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                  <a href="/shop.html" style="color: white; -webkit-text-stroke: 1px black; font-size: 40px;">
+                  <a href="./shop/index.html" style="color: white; -webkit-text-stroke: 1px black; font-size: 40px;">
                     E-commerce Store
                   </a>
                 </h3>
