--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <h2 class="pb-2 border-bottom">Services</h2>
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-5 py-5">
           <div class="col">
-            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-2 shadow-lg" style="background-image: url('images/ie.jpg');">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-0 shadow-lg" style="background-image: url('images/ie.jpg');">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                 <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
                   <a href="/import.html" style="color: white;  -webkit-text-stroke: 1px black; font-size: 40px;" >
@@ -176,7 +176,7 @@
           </div>
     
           <div class="col">
-            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-2 shadow-lg" style="background-image: url('images/autobooth.jpg');">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-0 shadow-lg" style="background-image: url('images/photoBoothPhotoStrips.png');">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
                   <a href="/autobooth.html" style="color: white; -webkit-text-stroke: 1px black; font-size: 40px;">
@@ -190,7 +190,7 @@
           </div>
     
           <div class="col">
-            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-2 shadow-lg" style="background-image: url('images/E-Commerce\ Illustration\ Kit-01.jpg');">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-0 shadow-lg" style="background-image: url('images/E-Commerce\ Illustration\ Kit-01.jpg');">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
                   <a href="/shop.html" style="color: white; -webkit-text-stroke: 1px black; font-size: 40px;">
@@ -210,7 +210,7 @@
 
 <!-- reviews -->
 
-<section class="bsb-cta-1 px-2 bsb-overlay mt-5" style="background-image: url('./images/2nd (1).jpg'); background-size: cover; background-position: center;">
+<!-- <section class="bsb-cta-1 px-2 bsb-overlay mt-5" style="background-image: url('./images/2nd (1).jpg'); background-size: cover; background-position: center;">
   <div class="container py-5">
     <div class="row justify-content-md-center">
       <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
@@ -221,7 +221,6 @@
   </div>
   <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" style="max-width: 90%; margin: 0 auto;">
     <div class="carousel-inner">
-      <!-- Carousel Item 1 -->
       <div class="carousel-item active">
         <div class="row gy-4 gx-5 justify-content-center">
           <div class="col-12 col-md-4">
@@ -271,7 +270,6 @@
           </div>
         </div>
       </div>
-      <!-- item 2 -->
       <div class="carousel-item active">
         <div class="row gy-4 gx-5 justify-content-center">
           <div class="col-12 col-md-4">
@@ -321,18 +319,9 @@
           </div>
         </div>
       </div>
-      <!-- Add more carousel items as needed -->
     </div>
-    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button> -->
   </div>
-</section>
+</section> -->
 
 <!-- reviews -->
 
